# async-scrape

./: .gitignore  LICENSE  MANIFEST  README.md  pyproject.toml  setup.cfg  setup.py  test_no_proxy.py
async-scrape/libs/: base_scrape.py
async_scrape/: __init__.py
async_scrape/libs/: async_scrape.py  base_scrape.py  scrape.py
async_scrape/utils/: errors.py  header_vars.py  soup.py
libs/: async_scrape.py  base_scrape.py  scrape.py
tests/: __init__.py  _tests.py  test_no_proxy.py  test_proxy.py
