[tool.poetry]
name = "async-scrape"
version = "0.1.11"
description = "A package designed to scrape webpages using aiohttp and asyncio. Has some error handling to overcome common issues such as sites blocking you after n requests over a short period."
authors = ["Robert Franklin <cia05rf@gmail.com>"]
maintainers = ["Robert Franklin <cia05rf@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/cia05rf/async-scrape/"
documentation = ""
keywords = ["scraping", "async", "requests"]

[tool.poetry.dependencies]
python = "^3.8"
nest-asyncio = "^1.5.6"
aiohttp = "^3.8.3"
PyPAC = "^0.16.0"
requests-html = "^0.10.0"
pandas = "^1.5.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.3.1"
pytest = "^6.2.5"
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
