[tool.poetry]
name = "async-scrape"
version = "0.1.19"
description = "A package designed to scrape webpages using aiohttp and asyncio. Has some error handling to overcome common issues such as sites blocking you after n requests over a short period."
authors = ["Robert Franklin <cia05rf@gmail.com>"]
maintainers = ["Robert Franklin <cia05rf@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cia05rf/async-scrape/"
repository = "https://github.com/cia05rf/async-scrape/"
documentation = "https://github.com/cia05rf/async-scrape/"
keywords = ["scraping", "async", "requests"]

[tool.poetry.dependencies]
python = "^3.11"
nest-asyncio = "^1.6.0"
aiohttp = "^3.9.5"
pypac = "^0.16.4"
requests-html = "^0.10.0"
brotli = "^1.1.0"
lxml-html-clean = "^0.1.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
pytest = "^8.2.2"
autopep8 = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
